# AI_trainer

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
ai_utils/: test_demo_analysis.py  test_functions.py
backend/: Dockerfile  api.py  build_references.py  main.py  models.py  pose_analyzer.py  reference_maker.py  services.py  utils.py
